# mock-patient-profile

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  README.md  mock-patient-profile-plan.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: draft-release.yml  publish-docs.yml  run-tests.yml
docs/: analysis-review.md  imaging-frontend-plan.md
docs/src/: conf.py  python-api.md
docs/src/_static/: custom.css
runinfo/000/htex_default_for_cytotable/certificates/: client.key  client.key_secret  server.key  server.key_secret
runinfo/000/submit_scripts/: parsl.htex_default_for_cytotable.block-0.1782069527.423132.sh  parsl.htex_default_for_cytotable.block-0.1782069527.423132.sh.err
src/mock_patient_profile/: __init__.py  bbbc021.py  cli.py  cytodataframe_io.py  cytotable_io.py  evaluation.py  multiomics.py  paths.py  patients.py  pipeline.py  profiling.py  qc.py  schema.py  synthetic.py
src/notebooks/: example_notebook.ipynb  example_notebook.py
tests/: conftest.py  test_adversarial.py  test_bbbc021.py  test_cli.py  test_cytodataframe_io.py  test_cytotable_io.py  test_evaluation.py  test_main.py  test_multiomics.py  test_patients.py  test_pipeline.py  test_profiling.py  test_qc.py  test_schema.py  test_synthetic.py
