[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64" ]

[project]
name = "mock-patient-profile"
version = "0.0.1"
description = """\
  Mock patient-aware morphology profiling workflow prototyping a patient-derived fibroblast Cell Painting architecture \
  using BBBC021, CytoTable, CytoDataFrame, coSMicQC, and pycytominer.\
  """
readme = "README.md"
authors = [
  { name = "Dave Bunten" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
# Runtime stack: a Parquet-first, vendor-neutral data layer (pyarrow/polars/
# duckdb/numpy/pandas) plus the Way Science morphology profiling ecosystem
# (cytotable/cytodataframe/cosmicqc/pycytominer). tabulate is required at import
# time by cosmicqc but undeclared upstream; fire/jinja2 power the CLI/reports.
dependencies = [
  "cosmicqc",
  "cytodataframe",
  "cytotable",
  "duckdb>=1",
  "fire>=0.7",
  "jinja2>=3.1.6",
  "numpy>=1.26",
  "pandas>=2.2.3",
  "polars>=1",
  "pyarrow>=16",
  "pycytominer",
  "scikit-learn>=1.9",
  "tabulate>=0.9",
]
scripts.mock-patient-profile = "mock_patient_profile.cli:trigger"

[dependency-groups]
dev = [
  "coverage[toml]>=7.10.6",
  "poethepoet>=0.34",
  "pytest>=8.3.5",
  "pytest-cov>=6.2.1",
]
docs = [
  "myst-nb>=1.2",
  "pydata-sphinx-theme>=0.16.1",
  "sphinx>=8.2.3",
]
notebooks = [
  "black>=25.1",
  "isort>=6.0.1",
  "jupyterlab>=4.4.2",
  "jupyterlab-code-formatter>=3.0.2",
  "jupytext>=1.17.1",
]

[tool.setuptools]
packages.find.where = [ "src" ]
packages.find.include = [ "mock_patient_profile*" ]
package-dir = { "" = "src" }
include-package-data = true

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
  # flake8-builtins
  "A",
  # flake8-annotations
  "ANN",
  # flake8-comprehensions
  "C4",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # pylint
  "PL",
  # ruff
  "RUF",
  # flake8-simplify
  "SIM",
  "W",
]
# Heavy optional deps (CytoTable/coSMicQC/pycytominer) are imported inside
# functions on purpose, to keep `import mock_patient_profile` lightweight.
lint.ignore = [ "PLC0415" ]
# Ignore `F401` (unused imports) for `__init__.py` file
lint.per-file-ignores."__init__.py" = [ "F401" ]
# Tests use literal expected values, pytest fixture args, and many-knob data
# builders idiomatically; relax the corresponding lints.
lint.per-file-ignores."tests/*" = [ "ANN001", "PLR0913", "PLR2004" ]

[tool.vulture]
paths = [ "src/mock_patient_profile", "tests" ]
min_confidence = 90

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.pythonpath = [ "." ]
ini_options.addopts = [
  "--cov=mock_patient_profile",
  "--cov-report=term-missing",
  "--cov-report=xml",
]
ini_options.markers = [
  "integration: end-to-end tests exercising the Way Science stack (deselect with '-m \"not integration\"').",
  "network: tests that require network access to download public data (deselect with '-m \"not network\"').",
]

[tool.coverage]
run.branch = true
run.source = [ "src/mock_patient_profile" ]
report.show_missing = true
report.skip_covered = true

[tool.jupytext]
formats = "ipynb,py:light"

[tool.poe]
# tasks for development environments
tasks.test.shell = """
pytest
"""
tasks.lint.shell = """
pre-commit run --all-files
"""
tasks.pipeline.shell = """
pre-commit run --all-files && pytest
"""
# run the full mock patient-profile workflow end to end
tasks.profile.shell = """
mock-patient-profile run
"""
tasks.jupyter.shell = """
jupyter lab
"""
